--- a/force-app/main/default/classes/S3Service.cls
+++ b/force-app/main/default/classes/S3Service.cls
@@ -2,8 +2,8 @@ public class S3Service {
     
     public class S3ServiceException extends Exception {}
 
-    private static final String S3_SIGNED_URL_ENDPOINT = 'api/v1/salesforce/s3SignedUrl';
-    private static final String S3_DELETE_FILES_ENDPOINT = 'api/v1/salesforce/s3Files';
+    private static final String S3_SIGNED_URL_ENDPOINT = '/api/v1/salesforce/s3SignedUrl';
+    private static final String S3_DELETE_FILES_ENDPOINT = '/api/v1/salesforce/s3Files';
     private static final Integer S3_API_TIMEOUT = 30000;
 
     public static void uploadToS3(String metadataType, String fileType, String fileName, String fileBody) {
@@ -11,26 +11,23 @@ public class S3Service {
             String url = getS3SignedUrl(fileType, metadataType, fileName);
             putXmlToS3(url, fileBody);
         } catch (S3ServiceException e) {
-
+            throw new S3ServiceException(e.getMessage());
         }
     }
 
     private static String getS3SignedUrl(String fileType, String metadataType, String fileName) {
-        // temporary for standalone; will be replace by call to Elements makeRequest()
-        String endpoint = 'https://a5f2-172-114-128-36.ngrok.io/' + S3_SIGNED_URL_ENDPOINT + '/' + fileType;
-        String publicKey = 'L82vG0W03qPXwNRXrl46';
-        String authorization = UserInfo.getOrganizationId() + '.' + EncodingUtil.convertToHex(Crypto.generateDigest('MD5', Blob.valueOF(publicKey + '.' + UserInfo.getOrganizationId() + '.1ZAiTn3FVvgOpwWBbGl1FFSuwkl8lt9pxuE8Fj5uAqDpusZRXa')));
-        HttpRequest req = new HttpRequest();
-        req.setEndpoint(endPoint);
-        req.setHeader('Content-Type', 'application/json');
-        req.setHeader('Accept', 'application/json');
-        req.setHeader('Authorization', authorization);
-        req.setMethod('POST');
-        req.setBody(JSON.serialize(new FileIdentifier(metadataType, fileName)));
-
         try {
-            HttpResponse res = new Http().send(req);
-            String url = (String) JSON.deserialize(res.getBody(), String.class);
+            ElementsApi.Result result = ElementsApi.makeRequest(
+                'Get S3 Signed Url',
+                'POST',
+                ElementsUtils.getApiEndpoint(S3_SIGNED_URL_ENDPOINT + '/' + fileType),
+                null,
+                JSON.serialize(new FileIdentifier(metadataType, fileName))
+            );
+
+            if (!result.isSuccess()) throw new S3ServiceException('S3Service: URL_ERROR: ' + result.getErrorMessage());
+
+            String url = (String) JSON.deserialize(result.returnJson, String.class);
             return url;
         } catch (Exception e) {
             throw new S3ServiceException('S3Service: URL_ERROR: ' + e.getMessage());
@@ -62,19 +59,29 @@ public class S3Service {
             fileIds.add(new FileIdentifier(metadataType, fileName));
         }
 
-        // temporary for standalone 
-        String endpoint = 'https://a5f2-172-114-128-36.ngrok.io/' + S3_DELETE_FILES_ENDPOINT + '/' + fileType;
-        String publicKey = 'L82vG0W03qPXwNRXrl46';
-        String authorization = UserInfo.getOrganizationId() + '.' + EncodingUtil.convertToHex(Crypto.generateDigest('MD5', Blob.valueOF(publicKey + '.' + UserInfo.getOrganizationId() + '.1ZAiTn3FVvgOpwWBbGl1FFSuwkl8lt9pxuE8Fj5uAqDpusZRXa')));
-        HttpRequest req = new HttpRequest();
-        req.setEndpoint(endPoint);
-        req.setHeader('Content-Type', 'application/json');
-        req.setHeader('Authorization', authorization);
-        req.setMethod('DELETE');
-        req.setTimeout(S3_API_TIMEOUT);
-        req.setBody(JSON.serialize(fileIds));
+        try {
+            ElementsApi.Result result = ElementsApi.makeRequest(
+                'Delete S3 Files',
+                'DELETE',
+                ElementsUtils.getApiEndpoint(S3_DELETE_FILES_ENDPOINT + '/' + fileType),
+                null,
+                JSON.serialize(fileIds)
+            );
 
-        HttpResponse res = new Http().send(req);
+            if (!result.isSuccess()) throw new S3ServiceException('S3Service: FILE_DELETE_ERROR: ' + result.getErrorMessage());
+
+            DeleteResult deleteResult = (DeleteResult) JSON.deserialize(result.returnJson, DeleteResult.class);
+            if (deleteResult.Errors != null) {
+                List<String> keys;
+                for (DeleteError e: deleteResult.Errors) {
+                    keys.add(e.Key);
+                }
+                // log errors    
+                throw new S3ServiceException('S3Service: FILE_DELETE_ERROR: Failed to delete files: ' + String.join(keys, ','));
+            }
+        } catch (Exception e) {
+            throw new S3ServiceException('S3Service: FILE_DELETE_ERROR: ' + e.getMessage());
+        }
     }
 
     class FileIdentifier {
@@ -85,5 +92,25 @@ public class S3Service {
             this.metadataType = metadataType;
             this.fileName = fileName;
         }
+    }
+
+    class DeleteResult {
+        List<Deleted> Deleted;
+        List<DeleteError> Errors;
+
+    }
+
+    class Deleted {
+        String Key;
+        String VersionId;
+        Boolean DeleteMarker;
+        String DeleteMarkerVersionId;
+    }
+
+    class DeleteError {
+        String Key;
+        String VersionId;
+        String Code;
+        String Message;
     }
 }
