--- a/force-app/main/default/classes/S3ServiceTest.cls
+++ b/force-app/main/default/classes/S3ServiceTest.cls
@@ -1,7 +1,7 @@
 @isTest
 public class S3ServiceTest {
     @isTest
-    public static void uploadToS3Test() {
+    private static void uploadToS3Test() {
         Boolean success = true;
         try {
             S3Service.uploadToS3('xml', 'Profile', 'test.xml', 'body');    
@@ -12,13 +12,13 @@ public class S3ServiceTest {
     }
 
     @isTest
-    public static void getS3SignedUrlTest() {
+    private static void getS3SignedUrlTest() {
         String url = S3Service.getS3SignedUrl('xml', 'Profile', 'test.xml');
         System.assertEquals('https://test.com', url, 'Expected "https://test.com"');
     }
 
     @isTest
-    public static void deleteFilesFromS3Test() {
+    private static void deleteFilesFromS3Test() {
         Boolean success = true;
         try {
             Test.startTest();
