--- a/force-app/main/default/classes/BatchLaunchRequestTest.cls
+++ b/force-app/main/default/classes/BatchLaunchRequestTest.cls
@@ -1,7 +1,7 @@
 @isTest
 public class BatchLaunchRequestTest {
     @isTest
-    public static void sendReadyNotificationTest() {
+    private static void sendReadyNotificationTest() {
         Boolean success = true;
         try {
             BatchLaunchRequest.ElementsNotification notifier = new BatchLaunchRequest.ElementsNotification();
@@ -11,5 +11,18 @@ public class BatchLaunchRequestTest {
             success = false;
         }
         System.assertEquals(true, success, 'Expected success == true');
+    }
+
+    @isTest
+    private static void testStartScheduleJob() {
+        ElementsSettingsController esc = (new ElementsSettingsControllerBundle()).esc;
+
+        Test.startTest();
+        esc.profileLayoutScheduleHours = 0;
+        esc.profileLayoutScheduleMinutes = 0;
+        esc.startProfileMetadataScheduleJob();
+        Test.stopTest();
+
+        System.assertEquals(ApexPages.getMessages().isEmpty(), true);//No messages at all
     }
 }
