do not rely on LastModifiedDate

--- a/force-app/main/default/classes/GetMetadataXmlBatch.cls
+++ b/force-app/main/default/classes/GetMetadataXmlBatch.cls
@@ -6,15 +6,20 @@ public class GetMetadataXmlBatch
     private static final String FILE_TYPE = 'xml';
 
     private List<String> timedOutFiles = new List<String>();
-    private Map<String, Datetime> lastSavedDatetimes = new Map<String, Datetime>();
+    private Map<String, Integer> hashMap;
     private String sessionId;
     private String metadataType;
     private MetadataXmlBatchHelper helper;
+    private Boolean ignoreLastModifiedDate;
+    private Map<String, MetadataXmlBatchHelper.MetadataItemWrapper> metadataItems
+        = new Map<String, MetadataXmlBatchHelper.MetadataItemWrapper>();
 
     public GetMetadataXmlBatch(List<String> sessionIdParts, String metadataType) {
         this.sessionId = sessionIdParts[0] + '!' + sessionIdParts[1];
         this.metadataType = metadataType;
         this.helper = new MetadataXmlBatchHelper(this.sessionId, this.metadataType);
+        this.ignoreLastModifiedDate = this.helper.getIgnoreLastModifiedDate();
+        this.hashMap = this.helper.getHashMap();
     }
 
     public List<String> start(Database.BatchableContext ctx) {
@@ -35,10 +40,16 @@ public class GetMetadataXmlBatch
         ReadMetadataApi readMetadataApi = new ReadMetadataApi(this.sessionId, this.metadataType, encodedFullNames);
         try {
             String xml = readMetadataApi.executeRequest();
-            String fileName = MetadataXmlBatchHelper.getFileName(encodedFullName);
-            // TODO: compare xml hash with stored hash; only upload if they're different
-            S3Service.uploadToS3(this.metadataType, FILE_TYPE, fileName, xml);
-            lastSavedDatetimes.put(encodedFullName, Datetime.now());
+            Integer newHash = xml.hashCode();
+            if (!this.ignoreLastModifiedDate || newHash != this.hashMap.get(encodedFullName)) {
+                String fileName = MetadataXmlBatchHelper.getFileName(encodedFullName);
+                S3Service.uploadToS3(this.metadataType, FILE_TYPE, fileName, xml);
+                MetadataXmlBatchHelper.MetadataItemWrapper item = new MetadataXmlBatchHelper.MetadataItemWrapper();
+                    item.encodedFullName = encodedFullName;
+                    item.hash = newHash;
+                    item.lastSavedDatetime = Datetime.now();
+                this.metadataItems.put(encodedFullName, item);
+            }
         } catch (MetadataService.MetadataServiceException e) {
             if (e.getMessage() == 'Read timed out') this.timedOutFiles.add(encodedFullName);
             // log the error
@@ -48,17 +59,12 @@ public class GetMetadataXmlBatch
     }
 
     public void finish(Database.BatchableContext ctx){
-        if (!this.lastSavedDatetimes.keySet().isEmpty()) {
-            MetadataXmlBatchHelper.updateLastSavedDatetimes(this.metadataType, this.lastSavedDatetimes);
+        if (!this.metadataItems.keySet().isEmpty()) {
+            MetadataXmlBatchHelper.updateSavedMetadataItems(this.metadataType, this.metadataItems);
         }
 
         if (!this.timedOutFiles.isEmpty()) {
             MetadataXmlBatchHelper.markTooBig(this.metadataType, this.timedOutFiles);
         }
     }
-
-    // class Parameters {
-    //     String sessionId;
-    //     String metadataType;
-    // }
 }
